--- a/WebApplication1/WebApplication1/BoVoyage.csproj
+++ b/WebApplication1/WebApplication1/BoVoyage.csproj
@@ -216,7 +216,10 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="HTML\Home.html" />
+    <Content Include="HTML\creer-client.html" />
+    <Content Include="HTML\creer-destination.html" />
+    <Content Include="HTML\creer-dossier.html" />
+    <Content Include="HTML\home.html" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
