HTML Bootstrap front

--- a/WebApplication1/WebApplication1/BoVoyage.csproj
+++ b/WebApplication1/WebApplication1/BoVoyage.csproj
@@ -213,14 +213,19 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
-    <Content Include="HTML\Home.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Front\menu-assurances.html" />
+    <Content Include="Front\menu-agences.html" />
+    <Content Include="Front\menu-destinations.html" />
+    <Content Include="Front\menu-dossiers.html" />
+    <Content Include="Front\menu-voyageurs.html" />
+    <Content Include="Front\menu-voyages.html" />
     <Content Include="Global.asax" />
-    <Content Include="HTML\creer-client.html" />
-    <Content Include="HTML\creer-destination.html" />
-    <Content Include="HTML\creer-dossier.html" />
-    <Content Include="HTML\home.html" />
+    <Content Include="Front\creer-client.html" />
+    <Content Include="Front\creer-destination.html" />
+    <Content Include="Front\creer-dossier.html" />
+    <Content Include="Front\home.html" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Areas\HelpPage\Views\Web.config" />
