--- a/WebApplication1/WebApplication1/BoVoyage.csproj
+++ b/WebApplication1/WebApplication1/BoVoyage.csproj
@@ -220,6 +220,8 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Front\creer-voyage.html" />
+    <Content Include="Front\creer-agence.html" />
     <Content Include="Front\menu-assurances.html" />
     <Content Include="Front\menu-agences.html" />
     <Content Include="Front\menu-destinations.html" />
