Ajout dossiers front

--- a/WebApplication1/WebApplication1/BoVoyage.csproj
+++ b/WebApplication1/WebApplication1/BoVoyage.csproj
@@ -227,18 +227,18 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
-    <Content Include="Front\creer-voyage.html" />
-    <Content Include="Front\creer-agence.html" />
-    <Content Include="Front\menu-assurances.html" />
-    <Content Include="Front\menu-agences.html" />
-    <Content Include="Front\menu-destinations.html" />
-    <Content Include="Front\menu-dossiers.html" />
-    <Content Include="Front\menu-voyageurs.html" />
-    <Content Include="Front\menu-voyages.html" />
+    <Content Include="Front\Voyage\creer-voyage.html" />
+    <Content Include="Front\Agence\creer-agence.html" />
+    <Content Include="Front\Assurance\menu-assurances.html" />
+    <Content Include="Front\Agence\menu-agences.html" />
+    <Content Include="Front\Destination\menu-destinations.html" />
+    <Content Include="Front\Dossier\menu-dossiers.html" />
+    <Content Include="Front\Client\menu-voyageurs.html" />
+    <Content Include="Front\Voyage\menu-voyages.html" />
     <Content Include="Global.asax" />
-    <Content Include="Front\creer-client.html" />
-    <Content Include="Front\creer-destination.html" />
-    <Content Include="Front\creer-dossier.html" />
+    <Content Include="Front\Client\creer-client.html" />
+    <Content Include="Front\Destination\creer-destination.html" />
+    <Content Include="Front\Dossier\creer-dossier.html" />
     <Content Include="Front\home.html" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
