--- a/WebApplication1/WebApplication1/BoVoyage.csproj
+++ b/WebApplication1/WebApplication1/BoVoyage.csproj
@@ -227,6 +227,8 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
+    <Content Include="Front\Agence\chercher-agence.html" />
+    <Content Include="Front\Agence\afficher-agences.html" />
     <Content Include="Front\Voyage\creer-voyage.html" />
     <Content Include="Front\Agence\creer-agence.html" />
     <Content Include="Front\Assurance\menu-assurances.html" />
