methodes get partie 2

--- a/WebApplication1/WebApplication1/BoVoyage.csproj
+++ b/WebApplication1/WebApplication1/BoVoyage.csproj
@@ -232,6 +232,7 @@
     <Content Include="Front\Agence\afficher-agences.html" />
     <Content Include="Front\Client\afficher-clients.html" />
     <Content Include="Front\Destination\afficher-destinations.html" />
+    <Content Include="Front\Voyage\afficher-voyages.html" />
     <Content Include="Front\Voyage\creer-voyage.html" />
     <Content Include="Front\Agence\creer-agence.html" />
     <Content Include="Front\Assurance\menu-assurances.html" />
