--- a/WebApplication1/WebApplication1/BoVoyage.csproj
+++ b/WebApplication1/WebApplication1/BoVoyage.csproj
@@ -231,6 +231,7 @@
     <Content Include="Front\Agence\chercher-agence.html" />
     <Content Include="Front\Agence\afficher-agences.html" />
     <Content Include="Front\Client\afficher-clients.html" />
+    <Content Include="Front\Client\chercher-client.html" />
     <Content Include="Front\Destination\afficher-destinations.html" />
     <Content Include="Front\Voyage\afficher-voyages.html" />
     <Content Include="Front\Voyage\creer-voyage.html" />
