--- a/WebApplication1/WebApplication1/BoVoyage.csproj
+++ b/WebApplication1/WebApplication1/BoVoyage.csproj
@@ -237,6 +237,8 @@
     <Content Include="Front\Client\afficher-clients.html" />
     <Content Include="Front\Client\chercher-client.html" />
     <Content Include="Front\Destination\afficher-destinations.html" />
+    <Content Include="Front\Participant\afficher-participant.html" />
+    <Content Include="Front\Participant\creer-participant.html" />
     <Content Include="Front\Voyage\afficher-voyages.html" />
     <Content Include="Front\Voyage\creer-voyage.html" />
     <Content Include="Front\Agence\creer-agence.html" />
